# MASS

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  requirements.txt  windows-toolchain.cmake
.github/workflows/: ci.yml
design/: uml-system-architecture.md
performanceTester/: FunctionList.hpp  FunctionSpace.cpp  FunctionSpace.hpp  StateSpaceIO.cpp  StateSpaceIO.hpp  main.cpp
performanceTester/visualisation/: main.py
src/: main.cpp
src/InputOutput/: CommandLineInputOutput.cpp  CommandLineInputOutput.hpp  InputOutput.cpp  InputOutput.hpp
src/Models/: DumbModel.cpp  DumbModel.hpp  GEKModel.cpp  GEKModel.hpp  LinearModel.cpp  LinearModel.hpp  Model.hpp  RBF.cpp  RBF.hpp  StochasticQueryModel.cpp  StochasticQueryModel.hpp  TestModel.cpp  TestModel.hpp
src/Models/Mapping/: GEKMapping.cpp  GEKMapping.hpp  IDW.cpp  IDW.hpp  Mapping.hpp
src/Models/Querying/: QueryTree.cpp  QueryTree.hpp
src/Models/Tools/: CandidateGenerator.hpp  KNNAlgorithm.hpp
src/StateSpace/: ArrayStateSpace.cpp  ArrayStateSpace.hpp  KDTreeStateSpace.cpp  KDTreeStateSpace.hpp  StateSpace.hpp
test/: CandidateGeneratorTest.cpp  InputOutputTest.cpp  ModelTest.cpp  StateSpaceTest.cpp  test_main.cpp
